--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
      <a href='work6/index.html'>work6 阶乘法计算圆周率</a><br>
      <a href='work7/index.html'>work7 冒泡排序和插入排序</a><br>
      <a href='work7slide/index.html'>work7 挑战任务</a><br>
+     <a href='work8/index.html'>work7 简易计算器</a><br>
      持续更新中。。。。。。
  </body>
  </html>
