--- a/work9/index.html
+++ b/work9/index.html
@@ -5,12 +5,12 @@
 </head>
 <body>
     <div>
-        <p>裴波纳契数列</p>
-        <div>
-            请输入:<input id="order" type="text">
-            <input type="button" value="计算" onclick="cal()">
-        </div>
-        <div>裴波纳契数列的值为<input id="Perbonacci" type="text"></div>
+        <p>裴波那契数列</p>
+    <div>
+        请输入项:<input id="order" type="text">
+        <input type="button" value="计算" onclick="cal()">
+    </div>
+    <div>裴波那契数列的值为<input id='Perbonacci' type="text"></div>
     </div>
     <div>
         <p>三级联动</p>
@@ -18,9 +18,9 @@
             <option value="-1">请选择</option>
         </select>
         <select id="majorSelect"></select>
-        <select id="calssSelect"></select>
+        <select id="classSelect"></select>
     </div>
 </body>
 <script src="index.js"></script>
 <script src="cascade.js"></script>
-</html>
+</html
