--- a/work12/index.html
+++ b/work12/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>   
     <meta charset="UTF-8">
-    <title>陈钦盛的万年历</title>
+    <title>庞晓的万年历</title>
     <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
