--- a/work13/index.html
+++ b/work13/index.html
@@ -7,10 +7,10 @@
         <div class="box">
             <div class="box-head">个人信息</div>
             <div class="box-body">
-                <form id="form" action="/fromBuilder" method="POST"></form>
+                <form id="form" action="/formBuilder" method="post"></form>
             </div>
         </div>
-        <script src="FormBuilder.js"></script>
+        <script src="Formbuilder.js"></script>
         <script src="index.js"></script>
     </body>
 </html>
