--- a/work13/index.html
+++ b/work13/index.html
@@ -10,7 +10,7 @@
                 <form id="form" action="/formBuilder" method="post"></form>
             </div>
         </div>
-        <script src="Formbuilder.js"></script>
+        <script src="FormBuilder.js"></script>
         <script src="index.js"></script>
     </body>
 </html>
