--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
      <a href="work14/index.html">work14 秒杀</a><br>
      <a href="work14-1/index1.html">work14-1 红绿灯</a><br>
      <a href="work14-2/index.html">work14-2 整点秒杀</a><br>
-     加油
+     <a href="work15/index.html">work15 购物车</a><br>
      持续更新中...
  </body>
  </html>
