--- a/work15/index.html
+++ b/work15/index.html
@@ -8,7 +8,7 @@
 
     <body>
         <div class="cart">
-            <div class="cart-title">陈楷荣的购物车</div>
+            <div class="cart-title">陈钦盛的购物车</div>
             <table class="cart-table">
                 <tr>
                     <th width="120"><span class="cart-all">全选</span><span>/</span><span class="cart-unall">全不选</span>
