--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
  <head>
      <meta charset="utf=8">
-     <title>陈钦盛的《javascript web前端开发》课程作业</title>
+    <title>陈钦盛的《javascript web前端开发》课程作业</title>
  </head>
  <body>
-     <p><h1>陈钦盛的《javascript web前端开发》课程作业</h1></p>
+     <h1 style="text-align: center;">陈钦盛的《javascript web前端开发》课程作业</h1>
      <a href='work1/index.html'>work1 开发环境安装</a><br>
      <a href='work2/inedx.html'>work2 简单网页任务</a><br>
      <a href='work3/index.html'>work3 js基本语法</a><br>
@@ -19,12 +19,14 @@
      <a href="work10/index.html">work10 猴子选大王</a><br>
      <a href="work12/index.html">work12 年历</a><br>
      <a href="work12-1/index.html">work12-1 万年历</a><br>
-     <a href="work13/index.html">work13  陈钦盛的表单生成器</a><br>
+     <a href="work13/index.html">work13 表单生成器</a><br>
      <a href="work14/index.html">work14 秒杀</a><br>
      <a href="work14-1/index1.html">work14-1 红绿灯</a><br>
      <a href="work14-2/index.html">work14-2 整点秒杀</a><br>
      <a href="work15/index.html">work15 购物车</a><br>
-     持续更新中...
+     <a href="work16/index.html">wor16 放大镜</a><br>
+     <a href="work16-1/index.html">wor16-1 小球快跑</a><br>
+     <h3>持续更新中...</h3>
  </body>
  </html>
  
