--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
      <a href="work15/index.html">work15 购物车</a><br>
      <a href="work16/index.html">wor16 放大镜</a><br>
      <a href="work16-1/index.html">wor16-1 小球快跑</a><br>
+     <a href="work17/index.html">wor17 表单验证</a><br>
      <h3>持续更新中...</h3>
  </body>
  </html>
