--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
      <a href="work16/index.html">wor16 放大镜</a><br>
      <a href="work16-1/index.html">wor16-1 小球快跑</a><br>
      <a href="work17/index.html">work17 表单验证</a><br>
-     
+     <a href="work18/index.html">work18 AJAX</a><br>
+     <a href="work18-1/index.html">work18 AJAX无刷新分页查看评论</a><br>
+     <a href="work19/index.html">work19 WebSocket聊天室</a><br>
+     <a href="work19-1/index.html">work19 进度条文件上传</a><br>
      <h3>持续更新中...</h3>
  </body>
  </html>
