--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
      <a href="work18-1/index.html">work18 AJAX无刷新分页查看评论</a><br>
      <a href="work19/index.html">work19 WebSocket聊天室</a><br>
      <a href="work19-1/index.html">work19 进度条文件上传</a><br>
+     <a href="work20/index.html">work20 折叠菜单</a><br>
+     <a href="work20-1/index.html">work20-1 选项移动</a><br>
      <h3>持续更新中...</h3>
  </body>
  </html>
