--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
      <a href="work19-1/index.html">work19 进度条文件上传</a><br>
      <a href="work20/index.html">work20 折叠菜单</a><br>
      <a href="work20-1/index.html">work20-1 选项移动</a><br>
+     <a href="work21/index.html">work21 无缝轮播图</a><br>
+     <a href="work21-1/index.html">work21-1 Ajax无刷新提交评论</a><br>
      <h3>持续更新中...</h3>
  </body>
  </html>
