--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
      <a href="work20-1/index.html">work20-1 选项移动</a><br>
      <a href="work21/index.html">work21 无缝轮播图</a><br>
      <a href="work21-1/index.html">work21-1 Ajax无刷新提交评论</a><br>
+     <a href="work23/index.html">work23 2048</a><br>
      <h3>持续更新中...</h3>
  </body>
  </html>
