--- a/work23/index.html
+++ b/work23/index.html
@@ -1,20 +1,21 @@
+
 <!DOCTYPE html>
 <html>
 
 <head>
     <meta charset="UTF-8">
-    <tltle>陈钦盛网页版2048游戏</tltle>
+    <title>陈钦盛的网页版2048游戏</title>
     <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
     <div id="game" class="game">
         <div class="game-score">
-            <input class="game-score" size=15 id="user" value="07190806陈钦盛">的分数：<span id="game-score">0</span>
+            <input class="game-score" size=15 id="user" value="07190806陈钦盛">的分数: <span id="game_score">0</span>
         </div>
         <div id="game_container" class="game-container">
             <div id="game_over" class="game-over game-hide">
-                <class="game-over-info">
+                <div class="game-over-info">
                     <div id="game_over_info"></div>
                     <span id="game_restart">重新开始</span>
                 </div>
@@ -26,4 +27,4 @@
     <script src="index.js"></script>
 </body>
 
-</html>
+</htmL>
